* Beta feature: Point value migration, allows for migration from one time-series database to another
* Re-factor PointValueDao (time-series) interface, methods have been substantially modified for ease of implementation
* Rename PointValueCacheDao to PointValueCache, methods have been substantially modified for ease of implementation

*Version 4.2.3*
* Fix bug in runtime where Update data point events were not reliably fired
* Fix bug in runtime where backdated values would be set as the current value of the point

*Version 4.2.2*
* Fix bug in mailing lists that would prevent emails from being sent to them
* Fix bug where Mango logo was not inserted into email template (Excel reports and Email event handler)

*Version 4.2.1*
* Add new datapoint permission definition to allow users to vew all data points.
* Enable exposing Jetty statistics via JMX (configurable via properties "web.enableJmx" and "web.connectionStatistics")
* Upgrade Jetty webserver to 9.4.43.v20210629
* Remove ssl.alpn.debug env property, this is now enabled by configuring log4j logger for the org.eclipse.jetty.alpn.server package
* Fix bug where event detectors added via a DataPointChangeDefinition were not initialized when the data point was created

*Version 4.2.0*
* Mango is now built for Java 11, it is now a hard requirement to use Java 11 or higher to run Mango
* Fix bugs in ipv6 network tools to accurately whitelist ipv6 addresses, would previously blacklist all ipv6
* Fix bugs when importing data points that include event detectors after exceeding the amount of data points allowed by the license
* Availability to monitor the common pool size inside ForkJoinPool, as an internal point for metrics.
* Fix bug in data point notify events to more accurately fire the correct event types that control meta points and event detectors
* Add properties to enable/disable disk usage monitoring for SQL and TSDB directories (internal.monitor.diskUsage.monitorSql and internal.monitor.diskUsage.monitorTsdb)