@@ -17,6 +17,8 @@
 * Beta feature: Point value migration, allows for migration from one time-series database to another
 * Re-factor PointValueDao (time-series) interface, methods have been substantially modified for ease of implementation
 * Rename PointValueCacheDao to PointValueCache, methods have been substantially modified for ease of implementation
+* Move MailingListService.cleanRecipientList method to DAO as it shouldn't be used at that level
+* Fix bug in upgrading Script permissions for Email and Set Point event handlers from pre Mango 4.0 permissions
 
 *Version 4.2.3*
 * Fix bug in runtime where Update data point events were not reliably fired
